[package]
name = "pow-consensus"
version = "2.0.0"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
sp-core = { version = "2.0.0-alpha.5" }
sp-blockchain = { version = "2.0.0-alpha.5" }
sp-runtime = { version = "2.0.0-alpha.5" }
sp-api = { version = "2.0.0-alpha.5" }
sc-client-api = { version = "2.0.0-alpha.5" }
sp-block-builder = { version = "2.0.0-alpha.5" }
sp-inherents = { version = "2.0.0-alpha.5" }
sp-consensus-pow = { version = "0.8.0-alpha.5" }
sp-consensus = { version = "0.8.0-alpha.5" }
log = "0.4.8"
futures = { version = "0.3.1", features = ["compat"] }
sp-timestamp = { version = "2.0.0-alpha.5" }
derive_more = "0.99.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
